# CMake101

./: CMakeLists.txt  README.md
include/: Widget.h
src/: CMakeLists.txt  Widget.cpp  main.cpp
